--- a/app/src/main/res/layout/fragment_man_hinh_chao.xml
+++ b/app/src/main/res/layout/fragment_man_hinh_chao.xml
@@ -9,8 +9,8 @@
 
     <!-- TODO: Update blank fragment layout -->
     <ImageView
-        android:layout_width="600dp"
-        android:layout_height="600dp"
-        android:src="@drawable/login"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/logo"
         />
 </LinearLayout>
